--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
-    "vuepress-plugin-medium-zoom": "^1.1.8"
+		"vuepress-plugin-medium-zoom": "^1.1.8",
+		"vuepress-plugin-back-to-top": "^1.2.0",
+		"@vuepress-plugin-back-to-top": "^1.2.0"
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.2.0"
