--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@vuepress-plugin-back-to-top": "^1.2.0"
   },
   "devDependencies": {
-    "@vuepress/plugin-back-to-top": "^1.3.0"
+    "@vuepress/plugin-back-to-top": "^1.3.0",
+    "vuepress": "^1.3.0"
   }
 }
